Class-Characyer interactions, Skill initi, onDrop handlers

--- a/lang/it.json
+++ b/lang/it.json
@@ -21,7 +21,7 @@
       "rule": "Regola",
       "spell": "Incantesimo",
       "shield": "Scudo",
-      "skill": "Abilità generica",
+      "skill": "Abilità",
       "weapon": "Arma",
       "martialItem": "Oggetto Marziale"
     }
